# trlogic_task

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: azure_cd.yml
src/: endpoints.rs  main.rs
static/: index.html  styles.css
