[package]
name = "trlogic_task"
version = "0.1.0"
authors = ["ilslv <ilya.solovyiov@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2"
actix-multipart = "0.2.0"
futures = "0.3.5"
mime = "0.3.16"
uuid = { version = "0.8", features = ["v4"]}
serde = "1.0"
reqwest = { version = "0.10", features = ["stream"] }
regex = "1"
base64 = "0.12"
lazy_static = "1.4.0"
image = "0.23"
